change bae pointer

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,5 +20,5 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 
-apiUrl=http://api.themoviedb.org/3/
+apiUrl=https://www.reddit.com/
 apiKey =328c283cd27bd1877d9080ccb1604c91
