--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-
 apiUrl=https://www.reddit.com/
-apiKey =328c283cd27bd1877d9080ccb1604c91
+apiKey=328c283cd27bd1877d9080ccb1604c91
