--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.Reddits">
+        android:theme="@style/Theme.Reddits"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".presenter.activity.MainActivity"
             android:exported="true">
@@ -24,8 +24,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".presenter.activity.DetailsActivity"
-            android:exported="true"/>
+        <activity
+            android:name=".presenter.activity.DetailsActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
